Fixed footer overlap issue in site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -56,7 +56,7 @@ body {
     /* Margin bottom by footer height */
     background-image: var(--background-image-primary);
 
-    margin-bottom: 60px;
+    margin-bottom: 130px;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -260,7 +260,7 @@ ul.type-list li {
 
 .grass-background {
     position: relative;
-    bottom: -150px;
+    bottom: 0;
     left: 0;
     width: 100%;
     height: 130px;
